--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -163,7 +163,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -262,7 +262,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -354,7 +354,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -440,7 +440,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -562,7 +562,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -658,7 +658,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -750,7 +750,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -838,7 +838,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response.
+                      omitted from the response. 
                     type: boolean
                   is_system_action:
                     description: >-
@@ -19038,7 +19038,7 @@ paths:
           description: >
             Indicates a successful call. NOTE: This HTTP response code indicates
             that the bulk operation succeeded.  Errors pertaining to individual
-            objects will be returned in the response body.
+            objects will be returned in the response body. 
         '400':
           content:
             application/json; Elastic-Api-Version=2023-10-31:
@@ -19072,7 +19072,7 @@ paths:
           description: >
             Indicates a successful call. NOTE: This HTTP response code indicates
             that the bulk operation succeeded. Errors pertaining to individual
-            objects will be returned in the response body.
+            objects will be returned in the response body. 
         '400':
           content:
             application/json; Elastic-Api-Version=2023-10-31:
@@ -24972,7 +24972,7 @@ components:
           description: >
             The scaling factor to use when encoding values. This property is
             applicable when `type` is `scaled_float`. Values will be multiplied
-            by this factor at index time and rounded to the closest long value.
+            by this factor at index time and rounded to the closest long value. 
           type: integer
         type:
           description: Specifies the data type for the field.
@@ -37843,11 +37843,9 @@ components:
       type: string
     Security_Entity_Analytics_API_Entity:
       oneOf:
-        - $ref: >-
-            #/components/schemas/Security_Solution_Entity_Analytics_API_UserEntity
-        - $ref: >-
-            #/components/schemas/Security_Solution_Entity_Analytics_API_HostEntity
-    Security_Solution_Entity_Analytics_API_EntityRiskLevels:
+        - $ref: '#/components/schemas/Security_Entity_Analytics_API_UserEntity'
+        - $ref: '#/components/schemas/Security_Entity_Analytics_API_HostEntity'
+    Security_Entity_Analytics_API_EntityRiskLevels:
       enum:
         - Unknown
         - Low
@@ -37855,7 +37853,7 @@ components:
         - High
         - Critical
       type: string
-    Security_Solution_Entity_Analytics_API_EntityRiskScoreRecord:
+    Security_Entity_Analytics_API_EntityRiskScoreRecord:
       type: object
       properties:
         '@timestamp':
@@ -37864,8 +37862,7 @@ components:
           format: date-time
           type: string
         calculated_level:
-          $ref: >-
-            #/components/schemas/Security_Solution_Entity_Analytics_API_EntityRiskLevels
+          $ref: '#/components/schemas/Security_Entity_Analytics_API_EntityRiskLevels'
           description: Lexical description of the entity's risk.
           example: Critical
         calculated_score:
@@ -37900,7 +37897,7 @@ components:
           type: number
         criticality_level:
           $ref: >-
-            #/components/schemas/Security_Solution_Entity_Analytics_API_AssetCriticalityLevel
+            #/components/schemas/Security_Entity_Analytics_API_AssetCriticalityLevel
         criticality_modifier:
           format: double
           type: number
@@ -37921,8 +37918,7 @@ components:
             A list of the highest-risk documents contributing to this risk
             score. Useful for investigative purposes.
           items:
-            $ref: >-
-              #/components/schemas/Security_Solution_Entity_Analytics_API_RiskScoreInput
+            $ref: '#/components/schemas/Security_Entity_Analytics_API_RiskScoreInput'
           type: array
         notes:
           items:
@@ -37939,7 +37935,7 @@ components:
         - category_1_count
         - inputs
         - notes
-    Security_Solution_Entity_Analytics_API_EntityType:
+    Security_Entity_Analytics_API_EntityType:
       enum:
         - user
         - host
@@ -37952,7 +37948,7 @@ components:
           properties:
             criticality:
               $ref: >-
-                #/components/schemas/Security_Solution_Entity_Analytics_API_AssetCriticalityLevel
+                #/components/schemas/Security_Entity_Analytics_API_AssetCriticalityLevel
           required:
             - criticality
         entity:
@@ -38025,7 +38021,7 @@ components:
               type: string
             risk:
               $ref: >-
-                #/components/schemas/Security_Solution_Entity_Analytics_API_EntityRiskScoreRecord
+                #/components/schemas/Security_Entity_Analytics_API_EntityRiskScoreRecord
             type:
               items:
                 type: string
@@ -38068,7 +38064,7 @@ components:
       properties:
         success:
           type: boolean
-    Security_Solution_Entity_Analytics_API_RiskScoreInput:
+    Security_Entity_Analytics_API_RiskScoreInput:
       description: A generic representation of a document contributing to a Risk Score.
       type: object
       properties:
@@ -38106,7 +38102,7 @@ components:
         - index
         - description
         - category
-    Security_Solution_Entity_Analytics_API_TaskManagerUnavailableResponse:
+    Security_Entity_Analytics_API_TaskManagerUnavailableResponse:
       description: Task manager is unavailable
       type: object
       properties:
@@ -38126,7 +38122,7 @@ components:
           properties:
             criticality:
               $ref: >-
-                #/components/schemas/Security_Solution_Entity_Analytics_API_AssetCriticalityLevel
+                #/components/schemas/Security_Entity_Analytics_API_AssetCriticalityLevel
           required:
             - criticality
         entity:
@@ -38196,7 +38192,7 @@ components:
               type: string
             risk:
               $ref: >-
-                #/components/schemas/Security_Solution_Entity_Analytics_API_EntityRiskScoreRecord
+                #/components/schemas/Security_Entity_Analytics_API_EntityRiskScoreRecord
             roles:
               items:
                 type: string
@@ -39916,7 +39912,7 @@ components:
           example: Bad Request
           type: string
         message:
-          example: "Invalid value 'foo' supplied to: [...]"
+          example: 'Invalid value ''foo'' supplied to: [...]'
           type: string
         statusCode:
           example: 400
