--- a/x-pack/plugins/triggers_actions_ui/kibana.jsonc
+++ b/x-pack/plugins/triggers_actions_ui/kibana.jsonc
@@ -27,7 +27,8 @@
       "expressions",
       "lens",
       "controls",
-      "embeddable"
+      "embeddable",
+      "entityManager"
     ],
     "optionalPlugins": [
       "cloud",
