--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -65,5 +65,6 @@
     "@kbn/licensing-plugin",
     "@kbn/slo-plugin",
     "@kbn/observability-ai-assistant-plugin",
+    "@kbn/slo-schema",
   ]
 }
