--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -21051,11 +21051,6 @@ paths:
                 required:
                   - timeline
                   - totalCount
-                  - defaultTimelineCount
-                  - templateTimelineCount
-                  - favoriteCount
-                  - elasticTemplateTimelineCount
-                  - customTemplateTimelineCount
           description: Indicates that the (template) Timelines were found and returned.
         '400':
           content:
@@ -39607,6 +39602,18 @@ components:
         updatedBy:
           nullable: true
           type: string
+    Security_Timeline_API_SavedTimelineWithSavedObjectId:
+      allOf:
+        - $ref: '#/components/schemas/Security_Timeline_API_SavedTimeline'
+        - type: object
+          properties:
+            savedObjectId:
+              type: string
+            version:
+              type: string
+          required:
+            - savedObjectId
+            - version
     Security_Timeline_API_SerializedFilterQueryResult:
       type: object
       properties:
@@ -39656,6 +39663,8 @@ components:
     Security_Timeline_API_TimelineResponse:
       allOf:
         - $ref: '#/components/schemas/Security_Timeline_API_SavedTimeline'
+        - $ref: >-
+            #/components/schemas/Security_Timeline_API_SavedTimelineWithSavedObjectId
         - type: object
           properties:
             eventIdToNoteIds:
@@ -39683,13 +39692,6 @@ components:
                 $ref: '#/components/schemas/Security_Timeline_API_PinnedEvent'
               nullable: true
               type: array
-            savedObjectId:
-              type: string
-            version:
-              type: string
-          required:
-            - savedObjectId
-            - version
     Security_Timeline_API_TimelineSavedToReturnObject:
       allOf:
         - $ref: '#/components/schemas/Security_Timeline_API_SavedTimeline'
@@ -39698,22 +39700,27 @@ components:
             eventIdToNoteIds:
               items:
                 $ref: '#/components/schemas/Security_Timeline_API_Note'
+              nullable: true
               type: array
             noteIds:
               items:
                 type: string
+              nullable: true
               type: array
             notes:
               items:
                 $ref: '#/components/schemas/Security_Timeline_API_Note'
+              nullable: true
               type: array
             pinnedEventIds:
               items:
                 type: string
+              nullable: true
               type: array
             pinnedEventsSaveObject:
               items:
                 $ref: '#/components/schemas/Security_Timeline_API_PinnedEvent'
+              nullable: true
               type: array
             savedObjectId:
               type: string
