Adding changes for make api-docs-lint

--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -18925,8 +18925,8 @@ paths:
           description: Indicate the event was successfully pinned in the timeline.
       summary: Persists a pinned event to a timeline.
       tags:
-        - Security Timeline API
-        - access:securitySolution
+        - Security Solution Timeline API
+        - 'access:securitySolution'
   /api/risk_score/engine/dangerously_delete_data:
     delete:
       description: >-
@@ -18948,18 +18948,18 @@ paths:
             application/json; Elastic-Api-Version=2023-10-31:
               schema:
                 $ref: >-
-                  #/components/schemas/Security_Entity_Analytics_API_TaskManagerUnavailableResponse
+                  #/components/schemas/Security_Solution_Entity_Analytics_API_TaskManagerUnavailableResponse
           description: Task manager is unavailable
         default:
           content:
             application/json; Elastic-Api-Version=2023-10-31:
               schema:
                 $ref: >-
-                  #/components/schemas/Security_Entity_Analytics_API_CleanUpRiskEngineErrorResponse
+                  #/components/schemas/Security_Solution_Entity_Analytics_API_CleanUpRiskEngineErrorResponse
           description: Unexpected error
       summary: Cleanup the Risk Engine
       tags:
-        - Security Entity Analytics API
+        - Security Solution Entity Analytics API
   /api/risk_score/engine/schedule_now:
     post:
       operationId: ScheduleRiskEngineNow
@@ -38914,7 +38914,7 @@ components:
       required:
         - id_value
         - id_field
-    Security_Entity_Analytics_API_CleanUpRiskEngineErrorResponse:
+    Security_Solution_Entity_Analytics_API_CleanUpRiskEngineErrorResponse:
       type: object
       properties:
         cleanup_successful:
@@ -38935,7 +38935,7 @@ components:
       required:
         - cleanup_successful
         - errors
-    Security_Entity_Analytics_API_CreateAssetCriticalityRecord:
+    Security_Solution_Entity_Analytics_API_CreateAssetCriticalityRecord:
       allOf:
         - $ref: >-
             #/components/schemas/Security_Solution_Entity_Analytics_API_AssetCriticalityRecordIdParts
