--- a/x-pack/plugins/observability_solution/apm/tsconfig.json
+++ b/x-pack/plugins/observability_solution/apm/tsconfig.json
@@ -127,6 +127,7 @@
     "@kbn/serverless",
     "@kbn/aiops-log-rate-analysis",
     "@kbn/router-utils",
+    "@kbn/react-hooks",
   ],
   "exclude": ["target/**/*"]
 }
