Automatically link rules to entities

--- a/x-pack/plugins/entity_manager/kibana.jsonc
+++ b/x-pack/plugins/entity_manager/kibana.jsonc
@@ -14,7 +14,8 @@
       "encryptedSavedObjects",
       "usageCollection",
       "licensing",
-      "taskManager"
+      "taskManager",
+      "alerting"
     ],
     "optionalPlugins": [
       "cloud",
