Fix type errors

--- a/x-pack/plugins/entity_manager/kibana.jsonc
+++ b/x-pack/plugins/entity_manager/kibana.jsonc
@@ -14,8 +14,7 @@
       "encryptedSavedObjects",
       "usageCollection",
       "licensing",
-      "taskManager",
-      "alerting"
+      "taskManager"
     ],
     "optionalPlugins": [
       "cloud",
