--- a/packages/kbn-search-api-keys/tsconfig.json
+++ b/packages/kbn-search-api-keys/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "target/types",
   },
   "include": [
-    "__mocks__/**/*",
     "common/**/*",
     "public/**/*",
     "server/**/*",
