--- a/x-pack/plugins/search_indices/kibana.jsonc
+++ b/x-pack/plugins/search_indices/kibana.jsonc
@@ -13,7 +13,6 @@
     "requiredPlugins": [
       "share",
       "indexManagement",
-      "searchApiKeys",
     ],
     "optionalPlugins": [
       "cloud",
@@ -22,8 +21,7 @@
     ],
     "requiredBundles": [
       "kibanaReact",
-      "esUiShared",
-      "searchApiKeys"
+      "esUiShared"
     ]
   }
 }
