--- a/oas_docs/output/kibana.staging.yaml
+++ b/oas_docs/output/kibana.staging.yaml
@@ -163,7 +163,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -262,7 +262,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -354,7 +354,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -440,7 +440,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -562,7 +562,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -658,7 +658,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -750,7 +750,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -838,7 +838,7 @@ paths:
                     description: >-
                       Indicates whether the connector is preconfigured. If true,
                       the `config` and `is_missing_secrets` properties are
-                      omitted from the response. 
+                      omitted from the response.
                     type: boolean
                   is_system_action:
                     description: >-
@@ -6867,7 +6867,7 @@ paths:
         - cases
     patch:
       description: >
-        You must have `all` privileges for the **Cases** feature in the 
+        You must have `all` privileges for the **Cases** feature in the
         **Management**, **Observability**, or **Security** section of the
         Kibana  feature privileges, depending on the owner of the case you're
         updating.
@@ -18352,6 +18352,10 @@ paths:
           schema:
             $ref: '#/components/schemas/Security_Timeline_API_DocumentIds'
         - in: query
+          name: savedObjectIds
+          schema:
+            $ref: '#/components/schemas/Security_Timeline_API_SavedObjectIds'
+        - in: query
           name: page
           schema:
             nullable: true
@@ -19035,7 +19039,7 @@ paths:
           description: >
             Indicates a successful call. NOTE: This HTTP response code indicates
             that the bulk operation succeeded.  Errors pertaining to individual
-            objects will be returned in the response body. 
+            objects will be returned in the response body.
         '400':
           content:
             application/json; Elastic-Api-Version=2023-10-31:
@@ -19069,7 +19073,7 @@ paths:
           description: >
             Indicates a successful call. NOTE: This HTTP response code indicates
             that the bulk operation succeeded. Errors pertaining to individual
-            objects will be returned in the response body. 
+            objects will be returned in the response body.
         '400':
           content:
             application/json; Elastic-Api-Version=2023-10-31:
@@ -24909,7 +24913,7 @@ components:
           description: >
             The scaling factor to use when encoding values. This property is
             applicable when `type` is `scaled_float`. Values will be multiplied
-            by this factor at index time and rounded to the closest long value. 
+            by this factor at index time and rounded to the closest long value.
           type: integer
         type:
           description: Specifies the data type for the field.
@@ -39694,6 +39698,12 @@ components:
         - aliasMatch
         - conflict
       type: string
+    Security_Timeline_API_SavedObjectIds:
+      oneOf:
+        - items:
+            type: string
+          type: array
+        - type: string
     Security_Timeline_API_SavedTimeline:
       type: object
       properties:
