[CI] Auto-commit changed files from 'node scripts/check_mappings_update --fix'

--- a/packages/kbn-check-mappings-update-cli/current_mappings.json
+++ b/packages/kbn-check-mappings-update-cli/current_mappings.json
@@ -1143,6 +1143,10 @@
       "installed_kibana_space_id": {
         "type": "keyword"
       },
+      "installed_misc": {
+        "dynamic": false,
+        "properties": {}
+      },
       "internal": {
         "type": "boolean"
       },
