--- a/x-pack/plugins/observability_solution/inventory/tsconfig.json
+++ b/x-pack/plugins/observability_solution/inventory/tsconfig.json
@@ -41,6 +41,7 @@
     "@kbn/core-http-browser",
     "@kbn/shared-svg",
     "@kbn/features-plugin",
-    "@kbn/es-query"
+    "@kbn/es-query",
+    "@kbn/config-schema"
   ]
 }
