moving to a package

--- a/package.json
+++ b/package.json
@@ -769,7 +769,8 @@
     "@kbn/screenshotting-example-plugin": "link:x-pack/examples/screenshotting_example",
     "@kbn/screenshotting-plugin": "link:x-pack/plugins/screenshotting",
     "@kbn/screenshotting-server": "link:packages/kbn-screenshotting-server",
-    "@kbn/search-api-keys": "link:packages/kbn-search-api-keys",
+    "@kbn/search-api-keys-api": "link:packages/kbn-search-api-keys-api",
+    "@kbn/search-api-keys-components": "link:packages/kbn-search-api-keys-components",
     "@kbn/search-api-panels": "link:packages/kbn-search-api-panels",
     "@kbn/search-assistant": "link:x-pack/plugins/search_assistant",
     "@kbn/search-connectors": "link:packages/kbn-search-connectors",
