--- a/packages/kbn-search-api-keys-components/tsconfig.json
+++ b/packages/kbn-search-api-keys-components/tsconfig.json
@@ -4,9 +4,8 @@
     "outDir": "target/types",
   },
   "include": [
-    "common/**/*",
-    "public/**/*",
-    "server/**/*",
+    "public/components/**/*",
+    "public/hooks/**/*"
   ],
   "kbn_references": [
     "@kbn/config-schema",
