--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1498,8 +1498,10 @@
       "@kbn/screenshotting-plugin/*": ["x-pack/plugins/screenshotting/*"],
       "@kbn/screenshotting-server": ["packages/kbn-screenshotting-server"],
       "@kbn/screenshotting-server/*": ["packages/kbn-screenshotting-server/*"],
-      "@kbn/search-api-keys": ["packages/kbn-search-api-keys"],
-      "@kbn/search-api-keys/*": ["packages/kbn-search-api-keys/*"],
+      "@kbn/search-api-keys-api": ["packages/kbn-search-api-keys-api"],
+      "@kbn/search-api-keys-api/*": ["packages/kbn-search-api-keys-api/*"],
+      "@kbn/search-api-keys-components": ["packages/kbn-search-api-keys-components"],
+      "@kbn/search-api-keys-components/*": ["packages/kbn-search-api-keys-components/*"],
       "@kbn/search-api-panels": ["packages/kbn-search-api-panels"],
       "@kbn/search-api-panels/*": ["packages/kbn-search-api-panels/*"],
       "@kbn/search-assistant": ["x-pack/plugins/search_assistant"],
