[Security Solution][Endpoint] changes to Endpoint metadata API in support of space awareness (#193490)
## Summary

### Fleet Plugin

- Added some mocks and updates others

### Security Solution

The following refactoring changes were done in preparation for
forthcoming work for supporting kibana spaces:

- A new saved objects client factory service was introduced for use in
`EndpointAppContextServices`
- Deleted older saved objects client utilities
- Simplified the list of options passed to
`EndpointAppContextService#start()` method
- Updated `EndpiontFleetServicesFactory` with:
    - simpler list of constructor arguments
    - changed members of object return by `asInternalUser()`
- Refactored the `EndpintMetadataService` to:
    - take in simplified constructor arguments
- Simplified most methods of the class with removal all ES Client, SO
Client or Fleet services arguments from class method calling signatures.
These are not provided to the service class upon initialization and can
be accessed internally by the methods
- Updates to Mocks and tests to reflect the above changes

(cherry picked from commit 0b1e9f475440d60260203ce2a85c8b57c4363130)

# Conflicts:
#	x-pack/plugins/security_solution/tsconfig.json

--- a/x-pack/plugins/security_solution/tsconfig.json
+++ b/x-pack/plugins/security_solution/tsconfig.json
@@ -226,5 +226,8 @@
     "@kbn/inference-plugin",
     "@kbn/entityManager-plugin",
     "@kbn/entities-schema",
+    "@kbn/inference-plugin",
+    "@kbn/core-saved-objects-server-mocks",
+    "@kbn/core-http-router-server-internal",
   ]
 }
