--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1528,6 +1528,8 @@
       "@kbn/search-playground/*": ["x-pack/plugins/search_playground/*"],
       "@kbn/search-response-warnings": ["packages/kbn-search-response-warnings"],
       "@kbn/search-response-warnings/*": ["packages/kbn-search-response-warnings/*"],
+      "@kbn/search-shared-ui": ["x-pack/packages/search/shared_ui"],
+      "@kbn/search-shared-ui/*": ["x-pack/packages/search/shared_ui/*"],
       "@kbn/search-types": ["packages/kbn-search-types"],
       "@kbn/search-types/*": ["packages/kbn-search-types/*"],
       "@kbn/searchprofiler-plugin": ["x-pack/plugins/searchprofiler"],
