--- a/packages/kbn-search-api-keys-components/tsconfig.json
+++ b/packages/kbn-search-api-keys-components/tsconfig.json
@@ -8,12 +8,12 @@
     "public/hooks/**/*"
   ],
   "kbn_references": [
-    "@kbn/core",
     "@kbn/i18n",
     "@kbn/i18n-react",
     "@kbn/kibana-react-plugin",
     "@kbn/security-api-key-management",
-    "@kbn/core-security-common"
+    "@kbn/search-shared-ui",
+    "@kbn/search-api-keys-api"
   ],
   "exclude": [
     "target/**/*",
