[CI] Auto-commit changed files from 'node scripts/check_mappings_update --fix'

--- a/packages/kbn-check-mappings-update-cli/current_mappings.json
+++ b/packages/kbn-check-mappings-update-cli/current_mappings.json
@@ -2847,6 +2847,9 @@
       "enabled": {
         "type": "boolean"
       },
+      "excludeAlertStatuses": {
+        "type": "keyword"
+      },
       "filter": {
         "dynamic": false,
         "properties": {}
