--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1098,6 +1098,8 @@
       "@kbn/kibana-usage-collection-plugin/*": ["src/plugins/kibana_usage_collection/*"],
       "@kbn/kibana-utils-plugin": ["src/plugins/kibana_utils"],
       "@kbn/kibana-utils-plugin/*": ["src/plugins/kibana_utils/*"],
+      "@kbn/knowledge-base-registry-plugin": ["x-pack/plugins/ai_infra/knowledge_base_registry"],
+      "@kbn/knowledge-base-registry-plugin/*": ["x-pack/plugins/ai_infra/knowledge_base_registry/*"],
       "@kbn/kubernetes-security-plugin": ["x-pack/plugins/kubernetes_security"],
       "@kbn/kubernetes-security-plugin/*": ["x-pack/plugins/kubernetes_security/*"],
       "@kbn/langchain": ["x-pack/packages/kbn-langchain"],
