--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -552,6 +552,7 @@ src/plugins/kibana_overview @elastic/appex-sharedux
 src/plugins/kibana_react @elastic/appex-sharedux
 src/plugins/kibana_usage_collection @elastic/kibana-core
 src/plugins/kibana_utils @elastic/appex-sharedux
+x-pack/plugins/ai_infra/knowledge_base_registry @elastic/appex-ai-infra
 x-pack/plugins/kubernetes_security @elastic/kibana-cloud-security-posture
 x-pack/packages/kbn-langchain @elastic/security-generative-ai
 packages/kbn-language-documentation @elastic/kibana-esql
