[CI] Auto-commit changed files from 'node scripts/notice'

--- a/x-pack/plugins/ai_infra/knowledge_base_registry/tsconfig.json
+++ b/x-pack/plugins/ai_infra/knowledge_base_registry/tsconfig.json
@@ -14,5 +14,9 @@
     ".storybook/**/*"
   ],
   "exclude": ["target/**/*", ".storybook/**/*.js"],
-  "kbn_references": []
+  "kbn_references": [
+    "@kbn/core",
+    "@kbn/logging",
+    "@kbn/config-schema",
+  ]
 }
