--- a/x-pack/plugins/observability_solution/slo/docs/openapi/slo/components/schemas/update_slo_request.yaml
+++ b/x-pack/plugins/observability_solution/slo/docs/openapi/slo/components/schemas/update_slo_request.yaml
@@ -26,6 +26,13 @@ properties:
     $ref: "objective.yaml"
   settings:
     $ref: "settings.yaml"
+  groupBy:
+    description: optional group by field or fields to use to generate an SLO per distinct value
+    oneOf:
+      - type: string
+      - type: array
+        items:
+          type: string
   tags:
     description: List of tags
     type: array
