--- a/packages/kbn-search-api-keys-components/tsconfig.json
+++ b/packages/kbn-search-api-keys-components/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "target/types",
   },
   "include": [
-    "public/components/**/*",
-    "public/hooks/**/*"
+    "public/**/*",
   ],
   "kbn_references": [
     "@kbn/core",
@@ -13,7 +12,9 @@
     "@kbn/i18n-react",
     "@kbn/kibana-react-plugin",
     "@kbn/security-api-key-management",
-    "@kbn/core-security-common"
+    "@kbn/core-security-common",
+    "@kbn/search-shared-ui",
+    "@kbn/search-api-keys-api",
   ],
   "exclude": [
     "target/**/*",
