--- a/x-pack/plugins/search_indices/tsconfig.json
+++ b/x-pack/plugins/search_indices/tsconfig.json
@@ -34,7 +34,8 @@
     "@kbn/cloud-plugin",
     "@kbn/search-index-documents",
     "@kbn/es-types",
-    "@kbn/search-api-keys",
+    "@kbn/search-api-keys-api",
+    "@kbn/search-api-keys-components"
   ],
   "exclude": [
     "target/**/*",
