--- a/oas_docs/output/kibana.serverless.staging.yaml
+++ b/oas_docs/output/kibana.serverless.staging.yaml
@@ -32014,9 +32014,7 @@ components:
           description: A description for the SLO.
           type: string
         groupBy:
-          description: optional group by field to use to generate an SLO per distinct value
-          example: some.field
-          type: string
+          $ref: '#/components/schemas/SLOs_group_by'
         id:
           description: >-
             A optional and unique identifier for the SLO. Must be between 8 and
@@ -32175,6 +32173,21 @@ components:
           type: number
       title: Find SLO response
       type: object
+    SLOs_group_by:
+      description: >-
+        optional group by field or fields to use to generate an SLO per distinct
+        value
+      example:
+        - - service.name
+        - service.name
+        - - service.name
+          - service.environment
+      oneOf:
+        - type: string
+        - items:
+            type: string
+          type: array
+      title: Group by
     SLOs_indicator_properties_apm_availability:
       description: Defines properties for the APM availability indicator type
       type: object
@@ -32765,9 +32778,7 @@ components:
           example: true
           type: boolean
         groupBy:
-          description: optional group by field to use to generate an SLO per distinct value
-          example: some.field
-          type: string
+          $ref: '#/components/schemas/SLOs_group_by'
         id:
           description: The identifier of the SLO.
           example: 8853df00-ae2e-11ed-90af-09bb6422b258
@@ -32851,9 +32862,7 @@ components:
           example: true
           type: boolean
         groupBy:
-          description: optional group by field to use to generate an SLO per distinct value
-          example: some.field
-          type: string
+          $ref: '#/components/schemas/SLOs_group_by'
         id:
           description: The identifier of the SLO.
           example: 8853df00-ae2e-11ed-90af-09bb6422b258
@@ -33074,6 +33083,8 @@ components:
         description:
           description: A description for the SLO.
           type: string
+        groupBy:
+          $ref: '#/components/schemas/SLOs_group_by'
         indicator:
           oneOf:
             - $ref: '#/components/schemas/SLOs_indicator_properties_custom_kql'
